# telemetry

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: c-cpp.yml
cpp/: CMakeLists.txt
cpp/include/telemetry/: metrics_snapshot.h  platform.h  status.h
cpp/include/telemetry/metrics/: collector.h  default_sources.h  metric_source.h
cpp/include/telemetry/net/: protocol.h  tcp_server.h
cpp/include/telemetry/util/: time.h
cpp/src/: main.cpp
cpp/src/metrics/: collector.cpp  default_sources.cpp  linux_metrics.cpp  macos_metrics.cpp  simulated_metrics.cpp  windows_metrics.cpp
cpp/src/net/: protocol.cpp  tcp_server.cpp  tcp_server_win.cpp
cpp/src/util/: time.cpp
cpp/tests/: CMakeLists.txt  minitest.h  test_collector.cpp  test_main.cpp  test_protocol.cpp
python/: requirements.txt
python/telemetry_client/: __init__.py  cli.py  client.py
